fix(PanelHeaderContext): increase z-index for FixedLayout context

--- a/src/components/FixedLayout/FixedLayout.css
+++ b/src/components/FixedLayout/FixedLayout.css
@@ -74,3 +74,11 @@
       ) + var(--safe-area-inset-top)
   );
 }
+
+/**
+ * CMP:
+ * PanelHeaderContext
+ */
+.FixedLayout.PanelHeaderContext {
+  z-index: 4;
+}
